--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-export API_URL=https://zenquotes.io/api/quotes
+export API_URL=https://philosophy-quotes-api.glitch.me/quotes
+#https://zenquotes.io/api/quotes
